Fixup the added classes